# -666

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  CREDITS.md  DEVELOPMENT.md  README.md
.github/workflows/: ci.yml
.scratch/pixel-town-ten-day-plan/: PRD.md
.scratch/pixel-town-ten-day-plan/issues/: 01-p0-offline-app-baseline.md  02-p0-resource-diagnostics-and-log.md  03-p0-visual-prototype-approval.md  04-p1-one-day-vertical-loop.md  05-p1-ten-day-cycle.md  06-p1-save-and-resume.md  07-p1-interaction-shell.md  08-p1-demo-presets.md  09-p2-restaurant-work.md  10-p2-convenience-store.md  11-p2-library-work.md  12-p3-tavern-shell.md  13-p3-gomoku.md  14-p3-liars-dice.md  15-p3-endings.md  16-p4-content-and-balance.md  17-p4-presentation-and-credits.md  18-p4-release-acceptance.md  19-p1-mvp-story-shell.md  20-p2-restaurant-ui-feedback.md  21-p2-restaurant-visual-assets-and-layout.md  22-p3-tavern-runtime-and-settlement-architecture.md  23-p4-shared-dialogue-bartender-slice.md  24-p4-restaurant-npc-dialogue.md  25-p4-convenience-store-npc-dialogue.md  26-p4-mayor-protagonist-dialogues.md  27-p4-library-room-navigation.md  28-p4-tavern-room-navigation.md  29-p4-library-organizing-mode.md  30-p4-location-story-context.md  31-p4-day-location-story-events.md  32-p4-night-home-story-events.md  33-p4-indoor-navigation-and-collision.md
assets/: README.md
assets/art_sources/imagegen/scene_kits/: component_batch_c_manifest.md  component_batch_c_prompts.md  extract_individual_pieces.py  individual_pieces_manifest.csv  individual_pieces_manifest.json
assets/art_sources/imagegen/scene_kits/style_boards/: README.md  prompts.md
assets/art_sources/legacy/tavern/: README.md
assets/art_sources/manual_composites/: README.md
assets/audio/: README.md
assets/data/: baseline.txt  library_data.txt
assets/data/demo_presets/: ending-eve.sav  midgame.sav
assets/textures/ui/: README.md
assets/textures/ui/tavern/: README.md
assets/textures/ui/tavern/LICENSES/: cozy_tavern_free_readme.txt  pixel_crawler_free_pack_terms.txt
build-issue30/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  pixel_town
build-issue30/saves/: slot1.sav
docs/: BUILD_AND_RUN.md  CHARACTER_DIALOGUE_PLAN.md  DESIGN.md  IMAGEGEN_VISUAL_PLAN.md  PROJECT_PLAN.md  README.md  RESTAURANT_VISUAL_SPEC.md  SCENE_ASSET_PRODUCTION_PLAN.md  TEAM_BRANCH_INTEGRATION.md  UI_ASSET_STRATEGY.md  VISUAL_PROTOTYPE.md
docs/adr/: 0001-adopt-raylib-and-doctest.md  0002-use-explicit-tavern-runtime-and-settlement-modules.md  0003-use-explicit-library-runtime.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/story/: ENDING_AND_ECHOES.md  LOCATIONS_AND_NPCS.md  LOCATION_EVENT_SCHEDULE.md  MVP_TEXT_PACK.md  NARRATIVE_OVERVIEW.md  PIXEL_TOWN_STORY_DESIGN.md  README.md  STORY_INTEGRATION_PLAN.md  STYLE_GUIDE.md  像素小镇_剧情设计文档.docx
src/app/: audio_cues.cpp  audio_cues.hpp  audio_runtime.cpp  audio_runtime.hpp  dialogue_runtime.cpp  dialogue_runtime.hpp  game_flow.cpp  game_flow.hpp  library_room_runtime.cpp  library_room_runtime.hpp  library_runtime.cpp  library_runtime.hpp  location_result_adapter.cpp  location_result_adapter.hpp  location_runtime.cpp  location_runtime.hpp  main.cpp  npc_lobby_runtime.cpp  npc_lobby_runtime.hpp  npc_sprite_spec.cpp  npc_sprite_spec.hpp  npc_sprite_view.cpp  npc_sprite_view.hpp  restaurant_ui_model.cpp  restaurant_ui_model.hpp  scene_visual_assets.cpp  scene_visual_assets.hpp  story_lifecycle_runtime.cpp  story_lifecycle_runtime.hpp  tavern_layout.cpp  tavern_layout.hpp  tavern_runtime.cpp  tavern_runtime.hpp  tavern_ui.cpp  tavern_ui.hpp  tavern_view.cpp  tavern_view.hpp  ui_primitives.cpp  ui_primitives.hpp  visual_prototype.cpp  (+3 more)
src/core/: display_config.hpp  ending_rules.cpp  ending_rules.hpp  game_config.hpp  game_session.cpp  game_session.hpp  gomoku_rules.cpp  gomoku_rules.hpp  interaction_runtime.hpp  liars_dice_rules.cpp  liars_dice_rules.hpp  location_lobby.cpp  location_lobby.hpp  location_story.cpp  location_story.hpp  scene_collision.cpp  scene_collision.hpp  scene_navigation.cpp  scene_navigation.hpp  story_dialogue.cpp  story_dialogue.hpp  story_text.cpp  story_text.hpp  tavern_rules.cpp  tavern_rules.hpp
src/io/: app_settings.cpp  app_settings.hpp  demo_preset.cpp  demo_preset.hpp  resource_diagnostics.cpp  resource_diagnostics.hpp  runtime_paths.cpp  runtime_paths.hpp  save_game.cpp  save_game.hpp  startup_log.cpp  startup_log.hpp
src/locations/: convenience_store.cpp  convenience_store.hpp  gomoku_rules.cpp  gomoku_rules.hpp  liars_dice_rules.cpp  liars_dice_rules.hpp  library_data.cpp  library_data.hpp  library_npc.cpp  library_npc.hpp  library_organizing.cpp  library_organizing.hpp  library_organizing_ui.cpp  library_organizing_ui.hpp  library_rules.cpp  library_rules.hpp  library_runtime_contract.hpp  library_scene.cpp  library_scene.hpp  library_ui.cpp  library_ui.hpp  library_work_result.hpp  restaurant.cpp  restaurant.hpp  tavern_challenge_settlement.cpp  tavern_challenge_settlement.hpp
src/locations/store/: store.cpp  store.hpp
src/ui/: scene_viewport.hpp  ui_metrics.hpp
tests/: app_settings_test.cpp  audio_cues_test.cpp  convenience_store_test.cpp  demo_preset_test.cpp  dialogue_runtime_test.cpp  display_config_test.cpp  ending_rules_test.cpp  game_session_test.cpp  gomoku_rules_test.cpp  interaction_runtime_test.cpp  liars_dice_rules_test.cpp  library_organizing_test.cpp  library_room_runtime_test.cpp  library_runtime_test.cpp  location_lobby_test.cpp  location_result_adapter_test.cpp  location_runtime_test.cpp  location_story_test.cpp  npc_lobby_runtime_test.cpp  npc_sprite_spec_test.cpp  resource_diagnostics_test.cpp  restaurant_test.cpp  restaurant_ui_model_test.cpp  runtime_paths_test.cpp  save_game_test.cpp  scene_collision_test.cpp  scene_navigation_test.cpp  store_test.cpp  story_lifecycle_runtime_test.cpp  story_text_test.cpp  tavern_challenge_settlement_test.cpp  tavern_rules_test.cpp  tavern_runtime_test.cpp  test_game_session_helpers.hpp  test_library.cpp
